[package]
name = "yamq"
version = "0.1.0"
edition = "2021"
description = "Yet Another MQTT implementation"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
num_enum = "0.7.4"
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread", "time", "net", "full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
